unpackaged/main/default/objects/Insumo__c/Insumo__c.object-meta.xml
<CustomObject>
    <label>Insumo</label>
    <nameField>
        <label>Insumo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insumos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>