unpackaged/main/default/objects/Insumo__c/fields/Accion__c.field-meta.xml
<CustomField>
    <fullName>Accion__c</fullName>
    <label>Acción</label>
    <length>100</length>
    <type>Text</type>
</CustomField>