unpackaged/main/default/objects/Insumo__c/fields/Aprobador_Buscar__c.field-meta.xml
<CustomField>
    <fullName>Aprobador_Buscar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprobador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Insumos</relationshipName>
    <type>Lookup</type>
</CustomField>