unpackaged/main/default/objects/Insumo__c/fields/Comentario__c.field-meta.xml
<CustomField>
    <fullName>Comentario__c</fullName>
    <label>Comentario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>