unpackaged/main/default/objects/Insumo__c/fields/Consecutivo__c.field-meta.xml
<CustomField>
    <fullName>Consecutivo__c</fullName>
    <label>Consecutivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>