unpackaged/main/default/objects/Insumo__c/fields/CreadoPor__c.field-meta.xml
<CustomField>
    <fullName>CreadoPor__c</fullName>
    <label>CreadoPor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>