unpackaged/main/default/objects/Insumo__c/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <label>No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>