unpackaged/main/default/objects/Insumo__c/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <label>Nombre Solicitante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>