unpackaged/main/default/objects/Insumo__c/fields/NombreJefe__c.field-meta.xml
<CustomField>
    <fullName>NombreJefe__c</fullName>
    <label>Nombre de quien autoriza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>