unpackaged/main/default/objects/Insumo__c/fields/TipoInsumo__c.field-meta.xml
<CustomField>
    <fullName>TipoInsumo__c</fullName>
    <label>Clasificación de Insumo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>