unpackaged/main/default/objects/Insumo__c/fields/UEN__c.field-meta.xml
<CustomField>
    <fullName>UEN__c</fullName>
    <label>UEN/Plaza</label>
    <length>100</length>
    <type>Text</type>
</CustomField>